# SSH_Remote_Monitoring_tool

./: .env.example  .env.firebase.example  .firebaserc  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  firebase.hosting-only.json  firebase.json  firestore.indexes.json  firestore.rules  implement.md  package-lock.json  package.json  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  research.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  firebase_app.py  firebase_auth.py  history.py  host_store.py  main.py  models.py  ssh_monitor.py
backend/app/api/: deps.py  ws_manager.py
backend/app/api/routers/: activity.py  auth.py  hosts.py  search.py  ws.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: __init__.py  file_history.py  file_hosts.py  firestore_history.py  firestore_hosts.py  history.py  hosts.py
backend/app/schemas/: activity.py  hosts.py  search.py
backend/app/services/: classifier.py  collector.py  parser.py  rollup.py  ssh.py
backend/app/static/: app.js  firebase-config.js  index.html  styles.css
backend/app/worker/: celery_app.py  redis_notify.py  tasks.py
backend/tests/: test_parser.py
backend/tests/fixtures/: ps_ubuntu_sample.txt
config/: hosts.example.yaml
docs/: design-system.md  firebase-deploy.md  ubuntu-server-deploy.md
functions/: .env.example  api_app.py  classifier_local.py  collector_firestore.py  config.py  (+4 more)
(+65 files in other folders)
