[project]
name = "ssh-remote-monitoring"
version = "0.1.0"
description = "SSH-based remote server monitoring dashboard"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
